--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -46,7 +46,7 @@
 
 .letter-send {
   position: relative;
-  background-color: rgba(112, 65, 207, 0.4);
+  background: linear-gradient(135deg, rgba(201, 174, 255, 0.6), rgba(176, 230, 252, 0.8));
   max-width: 100%;
   height: 100%;
   max-height: 28rem;
