--- a/src/assets/scss/_listings.scss
+++ b/src/assets/scss/_listings.scss
@@ -591,6 +591,27 @@
   border-radius: 0.15rem;
 }
 
+.listing-detail-no-images-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  top: 10%;
+
+  img {
+    width: 90%;
+  }
+}
+
+.listing-detail-no-images {
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
+  width: 100%;
+  font-size: 2.5rem;
+  color: $color-tertiary;
+  text-align: center;
+}
+
 .listing-detail-info-container {
   position: relative;
   font-family: "ChelseaMarket", "Raleway", sans-serif;
