Update contact form to use Formspree instead of Netlify

--- a/src/assets/scss/_buttons.scss
+++ b/src/assets/scss/_buttons.scss
@@ -140,6 +140,11 @@
   transition: 300ms ease all;
   -webkit-transition: 300ms ease all;
 
+  &:active,
+  &:focus {
+    outline: none;
+  }
+
   &:visited {
     color: $color-text;
     background-color: $color-primary;
