Migrate from create-react-app to Vite

--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: space-between;
   height: 3rem;
-  background: url("../../../public/wallpaper-strip.jpg");
+  background: url("../../../wallpaper-strip.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
