--- a/src/assets/scss/_loading.scss
+++ b/src/assets/scss/_loading.scss
@@ -247,7 +247,7 @@
   width: 10.3rem;
   height: 6.9rem;
   background: #eadecf;
-  // background-image: url("../../public/wall-21534_1280.jpg");
+  // background-image: url("../../wall-21534_1280.jpg");
   // background-repeat: no-repeat;
   // background-size: cover;
   left: 50%;
@@ -596,7 +596,7 @@
   position: absolute;
   width: 2.5rem;
   height: 2.5rem;
-  background: url("../../../public/bee-1.png");
+  background: url("../../../bee-1.png");
   background-size: cover;
   border-radius: 50%;
   animation: rotate-bee-small 4s linear infinite;
