--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -8,7 +8,7 @@
   min-width: 100%;
   // take into account height of navbar and footer
   min-height: calc(100vh - 7rem);
-  background: url("../../../public/watercolorbg.jpg");
+  background: url("../../../watercolorbg.jpg");
   background-size: cover;
   isolation: isolate;
   box-shadow: rgb(120, 117, 54) 0px 4px 4px inset;
