--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -3,27 +3,27 @@
 
 @font-face {
   font-family: 'AYearWithoutRain';
-  src: url("/assets/fonts/AYearWithoutRain.ttf") format('truetype');
+  src: url("../fonts/AYearWithoutRain.ttf") format('truetype');
 }
 
 @font-face {
   font-family: 'KGYouWontBringMeDown';
-  src: url("/assets/fonts/KGYouWontBringMeDown.ttf") format('truetype');
+  src: url("../fonts/KGYouWontBringMeDown.ttf") format('truetype');
 }
 
 @font-face {
   font-family: "ChelseaMarket";
-  src: url("/assets/fonts/ChelseaMarket.ttf") format('truetype');
+  src: url("../fonts/ChelseaMarket.ttf") format('truetype');
 }
 
 @font-face {
   font-family: 'FabfeltScript';
-  src: url("/assets/fonts/FabfeltScript.otf") format('opentype');
+  src: url("../fonts/FabfeltScript.otf") format('opentype');
 }
 
 @font-face {
   font-family: 'mathilde';
-  src: url("/assets/fonts/mathilde.otf") format('truetype');
+  src: url("../fonts/mathilde.otf") format('truetype');
 }
 
 @import "variables";
