Adjust position of save icon for listing detail

--- a/src/assets/scss/_listings.scss
+++ b/src/assets/scss/_listings.scss
@@ -581,6 +581,13 @@
   }
 }
 
+.listing-detail-save-container {
+  .listing-interactive-icon-container {
+    top: 1.5rem;
+    right: 2rem;
+  }
+}
+
 .listing-detail-page-img {
   position: relative;
   max-width: 100%;
