--- a/src/assets/scss/_media.scss
+++ b/src/assets/scss/_media.scss
@@ -236,6 +236,12 @@
     }
   }
 
+  .listing-detail-save-container {
+    .listing-interactive-icon-container {
+      right: 1.5rem;
+    }
+  }
+  
   .listing-detail-title,
   .listing-detail-price {
     font-size: 1.5rem;
