--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -33,6 +33,7 @@
 // external libraries
 @import "react-widgets/scss/styles.scss";
 @import "react-widgets-dropdown.scss";
+@import "react-slick-slider.scss";
 
 @import "animations";
 @import "buttons";
