--- a/src/assets/scss/_listings.scss
+++ b/src/assets/scss/_listings.scss
@@ -338,60 +338,14 @@
   border-top-right-radius: 0.5rem;
 }
 
-.img-arrow {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  font-size: 1.4rem;
-  color: $color-tertiary;
-  height: 100%;
-  width: 1.5rem;
-  top: 0;
-  cursor: pointer;
-  user-select: none;
-  -webkit-user-select: none;
-  transition: all 200ms;
-  -webkit-transition: all 200ms;
-  overflow: hidden;
-  
-  &:hover {
-    color: $color-primary;
-    transition: all 200ms;
-    -webkit-transition: all 200ms;
-  }
-}
-
-.img-arrow-left {
-  left: 0;
-
-  span {
-    transform: rotateY(180deg);
-  }
-}
-
-.img-arrow-right {
-  right: 0;
-}
-
-.listing-image-control-bar {
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: fit-content;
-  margin-top: 0.2rem;
-  padding: 0.5rem 1.6rem;
-}
-
 .listing-image-circle-container {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 1.2rem;
   height: 1.25rem;
+  top: 0.15rem;
 }
 
 .listing-image-circle {
@@ -549,35 +503,9 @@
     top: 0;
     left: 0;
   }
-}
 
-.listing-detail-img-container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 110rem;
-  width: 100%;
-  height: calc(100vh - 4rem); // minus navbar height
-  padding: 1rem 1.5rem 0.5rem 1.5rem;
-  margin: 0 auto;
-  z-index: 2;
-
-  .listing-image-control-bar {
-    position: unset;
-  }
-
-  .img-arrow {
-    width: unset;
-    font-size: 2rem;
-    height: 100%;
-    top: 0;
-    padding-bottom: 2rem;
-
-    &:hover {
-      color: $color-text;
-    }
+  * {
+    z-index: 2;
   }
 }
 
@@ -630,7 +558,7 @@
   background-size: cover;
   border-radius: 1rem;
   border: 5px solid $color-primary;
-  margin: 1.5rem;
+  margin: 4rem 1.5rem 1.5rem 1.5rem;
   padding: 1.5rem;
   overflow: hidden;
   z-index: 2;
