--- a/src/assets/scss/_media.scss
+++ b/src/assets/scss/_media.scss
@@ -75,37 +75,37 @@
     margin: 0;
   }
 
-  .image-control-slider-container {
+  .listing-detail-image-slider-container {
     height: max-content;
     max-height: calc(100vh - 4rem);
     max-width: 100%;
     padding: 1rem 1rem 0.5rem 1rem;
-  }
 
-  // All of the react-slick styles must use !important to override the default styles
-  .image-control-arrow {
-    position: absolute !important;
-    transform: translateY(-50%);
+    // All of the react-slick styles must use !important to override the default styles
+    .image-control-arrow {
+      position: absolute !important;
+      transform: translateY(-50%);
 
-    width: 1.75rem !important;
-    height: 1.75rem !important;
-  }
+      width: 1.75rem !important;
+      height: 1.75rem !important;
+    }
 
-  .slick-prev {
-    left: 0 !important;
-  }
+    .slick-prev {
+      left: 0 !important;
+    }
 
-  .slick-next {
-    right: 0 !important;
-  }
+    .slick-next {
+      right: 0 !important;
+    }
 
-  .slick-track {
-    display: block !important;
-  }
+    .slick-track {
+      display: block !important;
+    }
 
-  .slick-dots {
-    position: relative !important;
-    bottom: 0 !important;
+    .slick-dots {
+      position: relative !important;
+      bottom: 0 !important;
+    }
   }
   
   .listing-detail-info-container {
@@ -248,6 +248,11 @@
   .listing-container {
     width: 25rem;
     height: fit-content;
+  }
+
+  .listing-image-container {
+    min-height: unset;
+    padding: 0.75rem 0.75rem 0 0.75rem;
   }
 }
 
