Optimize images, particularly for mobile

--- a/src/assets/scss/base/_media.scss
+++ b/src/assets/scss/base/_media.scss
@@ -542,7 +542,9 @@
   }
 
   .hero-section-search-title {
-    max-width: 17rem;
+    white-space: unset;
+    padding: 0 2rem;
+    
   }
 
   .loading-screen-container {
