--- a/src/assets/scss/pages/_search-form.scss
+++ b/src/assets/scss/pages/_search-form.scss
@@ -56,7 +56,7 @@
   max-width: 70rem;
   min-height: 11.5rem;
   background-color: $color-primary-highlight;
-  background: url("../../../honeycombbg.jpg");
+  background: url("../../../honeycomb-bg.jpg");
   background-position: top center;
   border-radius: 0.6rem;
   box-shadow: 0 0 3px 1px #8baeb3;
