--- a/src/assets/scss/pages/_listings.scss
+++ b/src/assets/scss/pages/_listings.scss
@@ -106,7 +106,7 @@
   height: 27rem;
   color: #222427;
   background-color: rgb(253, 253, 252);
-  background: url("../../../watercolorbg.jpg");
+  background: url("../../../watercolor-bg.jpg");
   background-size: cover;
   background-position: center 50%;
   border: 2px solid rgb(202, 180, 246);
@@ -127,7 +127,7 @@
   height: 27rem;
   color: #222427;
   background-color: rgb(253, 253, 252);
-  background: url("../../../watercolorbg.jpg");
+  background: url("../../../watercolor-bg.jpg");
   background-size: cover;
   background-position: center 50%;
   border: 2px solid rgb(202, 180, 246);
@@ -485,7 +485,7 @@
   height: 100%;
   background-color: rgb(253, 253, 212);
   padding-bottom: 1.5rem;
-  background: url("../../../watercolorbg.jpg");
+  background: url("../../../watercolor-bg.jpg");
   background-size: cover;
   
   &::after {
@@ -548,7 +548,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  background: url("../../../1.jpg");
+  background: url("../../../listing-bg.jpg");
   background-size: cover;
   border-radius: 1rem;
   border: 5px solid $color-primary;
@@ -566,7 +566,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(254, 254, 200, 0.92);
+    background-color: rgba(254, 254, 200, 0.85);
     top: 0;
     left: 0;
     z-index: 1;
