--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -16,6 +16,7 @@
 
 // Components
 @import "components/buttons";
+@import "components/full-screen";
 @import "components/sorting-dropdown";
 @import "components/tooltips";
 
