--- a/src/assets/scss/pages/_listings.scss
+++ b/src/assets/scss/pages/_listings.scss
@@ -534,14 +534,39 @@
   }
 }
 
-.listing-detail-removed-note {
+.listing-detail-banner-container {
+  display: flex;
+  justify-content: center;
+  padding: 0 1rem;
+  z-index: 2;
+
+  * {
+    z-index: inherit;
+  }
+}
+
+.listing-detail-banner {
+  display: flex;
+  justify-content: center;
+  width: fit-content;
+  background-color: rgba($color-tertiary, 0.12);
+  border: 2px solid rgba($color-secondary-highlight, 0.3);
+  border-radius: 10px;
+  padding: 0.4rem;
+  margin: 1rem auto 0 auto;
+}
+
+.banner-x-icon {
+  font-size: 2rem;
+}
+
+.listing-detail-banner-content {
   position: relative;
   font-family: "ChelseaMarket";
   color: $color-text;
   text-align: center;
   white-space: pre-wrap;
-  z-index: 2;
-  padding: 1rem 2rem;
+  padding: 0.75rem 2rem;
 }
 
 .listing-detail-save-container {
