--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -42,3 +42,8 @@ $white: rgb(241, 240, 240);
 // box-shadow
 $focus-shadow: 0 0 3px 1px #8baeb3;
 $hover-shadow: 0 0 1px 0 #ced0e4;
+
+// transition
+$short-transition: 200ms ease all;
+$med-transition: 250ms ease all;
+$main-transition: 300ms ease all;
