--- a/src/assets/scss/pages/_homepage.scss
+++ b/src/assets/scss/pages/_homepage.scss
@@ -1,7 +1,10 @@
 .hero-section {
   position: relative;
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  height: calc(100vh - 7rem);
+  min-height: calc(100vh - 7rem);
+  min-height: calc(100dvh - 7rem);
   background-color: $color-secondary;
   bottom: 0;
 }
@@ -11,6 +14,7 @@
   display: flex;
   align-items: flex-end;
   justify-content: right;
+  flex: 1;
   height: 100%;
   bottom: 0;
 }
